other/generate-networkpolicy-existing/.chainsaw-test/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: generate-networkpolicy-existing
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: ../generate-networkpolicy-existing.yaml
    - assert:
        file: policy-ready.yaml
  - name: step-02
    try:
    - apply:
        file: ns.yaml
    - assert:
        file: netpol.yaml
